[package]
name = "apex-predator"
version = "206.11.0"
edition = "2021"

# ELITE OVERRIDE: Explicitly points to main.rs in the root
[[bin]]
name = "apex-predator"
path = "main.rs"

[dependencies]
# 2026 standard for high-performance Ethereum
alloy = { version = "1.0", features = ["full", "pubsub", "rpc-types-eth", "signer-local"] }
# fastest in-process EVM
revm = { version = "8.0", features = ["std", "serde", "memory_db", "optional_no_base_fee"] }
# Thread-safe RAM market state
dashmap = { version = "6.0", features = ["rayon"] }
# Data-parallelism for 12-hop search
rayon = "1.10"
# Performance-optimized NLP
vader-sentiment = "0.1.1"
# Hardware-level thread pinning
core_affinity = "0.8"
# Core utilities
tokio = { version = "1.38", features = ["full", "parking_lot"] }
anyhow = "1.0"
dotenv = "0.15"
colored = "2.1"

[profile.release]
opt-level = 3
lto = "fat"           # Merges all crates into a single high-speed binary
codegen_units = 1     # Maximizes global optimization
panic = "abort"       # Eliminates unwinding overhead
strip = "symbols"     # Hardens the binary and reduces size
